--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="" class="btn">View Collections</a>
     </div>
    <div class="main2">
-<img src="https://tse3.mm.bing.net/th/id/OIP.RAY-yHCgnMuF5ti9iwfjkwHaFj?pid=ImgDet&w=207&h=155&c=7&dpr=1.3" class="girl">
+<img src="istockphoto-921504204-612x612-removebg-preview.png" class="girl">
 </div>
 </div>
 </div>
