--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="" class="btn">View Collections</a>
     </div>
    <div class="main2">
-<img src="istockphoto-921504204-612x612-removebg-preview.png" class="girl">
+<img src="istockphoto-921504204-612x612-removebg-preview - Copy - Copy.png" class="girl">
 </div>
 </div>
 </div>
