--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="https://i.pinimg.com/originals/19/39/cc/1939ccb1d2b08cdaf238a184ccfc3556.jpg">
       </div>
       <div class="col">
-        <img src="https://th.bing.com/th/id/OIP.sAKhxpZjtrZzeCFKJrBH-AHaMK?pid=ImgDet&rs=1">
+        <img src="https://assets.ajio.com/medias/sys_master/root/20230808/LYRE/64d14ea9eebac147fcb0c928/-473Wx593H-466431240-black-MODEL.jpg">
       </div>
       <div class="col">
         <img src="https://static.jaypore.com/tr:w-500,h-662,e-sharpen/media/catalog/product/8/0/800103199-1_1.jpg">
